[Pattern] Fix truncation of global filters

--- a/src-docs/src/views/header/_global_filter_item.scss
+++ b/src-docs/src/views/header/_global_filter_item.scss
@@ -2,6 +2,7 @@
   line-height: $euiSizeL + $euiSizeXS;
   border: none;
   color: $euiTextColor;
+  max-width: calc(100% - #{$euiSizeS * 2}); // Padding plus border
 
   &:not(.globalFilterItem-isDisabled) {
     @include euiFormControlDefaultShadow;
